Html-avançado: video controle

--- a/html-Avancado/atributos-Personalizados/aula-01/index.html
+++ b/html-Avancado/atributos-Personalizados/aula-01/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title> Olá Mundo </title>
+    <title> Atributos Personalizados </title>
 </head>
 
 <body>
