--- a/css-Avancado/index.html
+++ b/css-Avancado/index.html
@@ -9,9 +9,9 @@
 
 <body>
     <div class="container">
-    </div>
-    <h1 class="nome1">Pedro</h1>
-    <h1 class="nome2">Felipe</h1>
+        <div class="item r1">1</div>
+        <div class="item r2">2</div>
+        <div class="item r3">3</div>
 </body>
 
 </html>
